--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
-{
-    "name":         "gklst",
-    "description":  "Geeklist CLI tool",
-    "keywords":     ["geeklist", "cli", "geekli.st"],
-    "author":       "Christian Sanz <chrissanz@gmail.com>",
-    "version":      "0.0.1",
-    "licenses":     [{
-      "type":       "MIT",
-      "url":        "http://github.com/geeklist/gklst/raw/master/LICENSE"
-    }],
-    "repository": {
-      "type": "git",
-      "url": "http://github.com/csanz/nyam.git" 
-    },
-    "engines":      {
-      "node":       ">=0.4.0"
-    },
-    "dependencies": {
-        "optimist": ">= 0.1.5"
-      , "oauth": "0.9.0"
-      , "colors": "*"
-    },
-    "main" : "./lib/nyam",
-    "bin":          {
-      "nyam":       "./lib/cli.js"
+{ "name"            : "ngeek"
+, "description"     : "Geeklist CLI tool."
+, "author"          : "Christian Sanz <chris@geekli.st>"
+, "version"         : "0.1.0"
+, "licenses"        :
+  [ { "type"        : "MIT"
+    , "url"         : "https://github.com/geeklist/ngeek/raw/master/LICENSE"
     }
+  ]
+, "repository"      :
+  { "type"          : "git"
+  , "url"           : "http://github.com/geelist/ngeek.git"
+  }
+, "engines"         : { "node" : "0.6.x" }
+, "dependencies"    :
+  { "nopt"          : "1.0.x"
+  , "oauth-client"  : "0.3.x"
+  , "colors"        : "0.6.x"
+  }
+, "main"            : "./lib/geeklist"
+, "bin"             :
+  { "ngeek"         : "./bin/ngeek"
+  }
 }
